src/parser/tests/snapshots/rusty__parser__tests__variable_parser_tests__date_and_time_constants_test.snap
---
source: src/parser/tests/variable_parser_tests.rs
expression: "format!(\"{:#?}\", vars)"
---
VariableBlock {
    variables: [
        Variable {
            name: "cT",
            data_type: DataTypeReference {
                referenced_type: "TIME",
            },
            initializer: Some(
                DefaultValue,
            ),
        },
        Variable {
            name: "cT_SHORT",
            data_type: DataTypeReference {
                referenced_type: "TIME",
            },
            initializer: Some(
                DefaultValue,
            ),
        },
        Variable {
            name: "cLT",
            data_type: DataTypeReference {
                referenced_type: "LTIME",
            },
            initializer: Some(
                DefaultValue,
            ),
        },
        Variable {
            name: "cLT_SHORT",
            data_type: DataTypeReference {
                referenced_type: "LTIME",
            },
            initializer: Some(
                DefaultValue,
            ),
        },
        Variable {
            name: "cD",
            data_type: DataTypeReference {
                referenced_type: "DATE",
            },
            initializer: Some(
                DefaultValue,
            ),
        },
        Variable {
            name: "cD_SHORT",
            data_type: DataTypeReference {
                referenced_type: "DATE",
            },
            initializer: Some(
                DefaultValue,
            ),
        },
        Variable {
            name: "cLD",
            data_type: DataTypeReference {
                referenced_type: "LDATE",
            },
            initializer: Some(
                DefaultValue,
            ),
        },
        Variable {
            name: "cLD_SHORT",
            data_type: DataTypeReference {
                referenced_type: "LDATE",
            },
            initializer: Some(
                DefaultValue,
            ),
        },
        Variable {
            name: "cTOD",
            data_type: DataTypeReference {
                referenced_type: "TIME_OF_DAY",
            },
            initializer: Some(
                DefaultValue,
            ),
        },
        Variable {
            name: "cTOD_SHORT",
            data_type: DataTypeReference {
                referenced_type: "TOD",
            },
            initializer: Some(
                DefaultValue,
            ),
        },
        Variable {
            name: "cLTOD",
            data_type: DataTypeReference {
                referenced_type: "LTOD",
            },
            initializer: Some(
                DefaultValue,
            ),
        },
        Variable {
            name: "cLTOD_SHORT",
            data_type: DataTypeReference {
                referenced_type: "LTOD",
            },
            initializer: Some(
                DefaultValue,
            ),
        },
        Variable {
            name: "cDT",
            data_type: DataTypeReference {
                referenced_type: "DATE_AND_TIME",
            },
            initializer: Some(
                DefaultValue,
            ),
        },
        Variable {
            name: "cDT_SHORT",
            data_type: DataTypeReference {
                referenced_type: "DT",
            },
            initializer: Some(
                DefaultValue,
            ),
        },
        Variable {
            name: "cLDT",
            data_type: DataTypeReference {
                referenced_type: "LDT",
            },
            initializer: Some(
                DefaultValue,
            ),
        },
        Variable {
            name: "cLDT_SHORT",
            data_type: DataTypeReference {
                referenced_type: "LDT",
            },
            initializer: Some(
                DefaultValue,
            ),
        },
    ],
    variable_block_type: Global,
}
